pxc/tests/test_19_thread/thr5.px
import common -;

namespace thr5;
import thread -;

multithreaded struct my_thread_obj (io::io sys0) {
  int x;
  int y;
  io::io sys = sys0;
  function void main() {
    io::file::file stdout = io::standard::get_stdout(sys);
    io::standard::file_println(stdout, "my thread main");
    io::standard::file_println(stdout, x);
    io::standard::file_println(stdout, y);
  }
}

function void test1()
{
  io::io i;
    // error: io_impl is not default-constructible
  threadptr thr = create_thread(my_thread_obj(i));
  thr.join();
}

test1();

